两个栈组成的队列2

--- a/code/programmer-code-interview/instruction/ch01-stack-queue/problem-02/两个栈组成的队列.md
+++ b/code/programmer-code-interview/instruction/ch01-stack-queue/problem-02/两个栈组成的队列.md
@@ -9,4 +9,14 @@
 栈：先进后出\
 队列：先进先出
 
+栈1：入队列
+栈2：出队列
 
+栈1 转移 栈2 时机：
++ 出队列——poll
++ 取队头值——peek
++ 入队列——add
+
+栈1 转移 栈2 原则：
++ 栈1 转移到 栈2，必须全部转移
++ 栈2 不为空，栈1 不能进行转移
